added all game data, sample of outlier reviews and updated notebook description

--- a/SteamGameReviews.ipynb
+++ b/SteamGameReviews.ipynb
@@ -17,9 +17,7 @@
     "***\n",
     "#### __Project description__\n",
     "\n",
-    "In this project we analyse the relations between the sentiments of game reviews on the gaming platform Steam. To access data on Steam we use the official RESTful Steam API. Some services require a web-key which is only available with an active Steam account. The description to activate the web-key can found here: https://steamcommunity.com/dev\n",
-    "\n",
-    "> IMPORTANT: After activation you need to insert the key to the constant 'STEAM_WEB_API_KEY' in the configuration section [Configuration constants](####configuration-constants) "
+    "In this project we analyse the relations between the sentiments of game reviews on the gaming platform Steam. "
    ]
   },
   {
@@ -27,6 +25,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Data retrieval__ (Skip this if data was already retrieved)\n",
+    "\n",
+    "To access data on Steam we use the official RESTful Steam API. Some services require a web-key which is only available with an active Steam account. The description to activate the web-key can found here: https://steamcommunity.com/dev\n",
+    "\n",
+    "> ##### IMPORTANT : After activation you need to insert the key to the constant 'STEAM_WEB_API_KEY' in the configuration section [Configuration constants](####configuration-constants) \n",
+    "\n",
+    "__Research Question__\n",
+    "\n",
+    "Is there a correlation between the sentiment of reviews on video games available on Steam and their score rating, their perception of being helpful and their recommendation?\n",
+    "\n",
+    "\n",
     "__Our Hypotheses__\n",
     "\n",
     "* H1: There is a positive correlation between the sentiment of the reviews and the review-score of each game.\n",
@@ -43,9 +52,8 @@
     "\n",
     "Here are the steps that should give an overview of what this notebook does: \n",
     "1. Request all games (name and appid) from the Steam using its API\n",
-    "2. For every game we retrieve its most helpful 100 reviews\n",
-    "3. For every game:\n",
-    "    * Perform sentiment analysis on every single review (We use VADER to perform sentiment analysis)\n",
+    "2. For every game we retrieve its most helpful 100 reviews (If there are not at least 100 reviews we skip this game)\n",
+    "3. We perform sentiment analysis on every single review (We use VADER to perform sentiment analysis)\n",
     "4. Statistical analysis\n",
     "    * Evaluate hypotheses and perform statistical tests"
    ]
@@ -57,6 +65,8 @@
    "source": [
     "***\n",
     "#### __File and Folder structure__\n",
+    "Only for data retrieval:\n",
+    "\n",
     "- __FOLDER: sentiment__\n",
     "    - One file for one game. Every file contains the sentiment scores of 100 reviews. \n",
     "    - Filename: [appid].pkl\n",
@@ -67,8 +77,21 @@
     "    - For a container that represents all games that are not relevant\n",
     "    - Consits of one big dictionary which keys are the appid and information of why this game is irrelevant for our analysis. \n",
     "- __FILE: games.pkl__\n",
+    "    - Contains a dataframe of all full games (no DLCs or other software) without further filtering\n",
+    "\n",
+    "All retrieved data will be combined into two dataframes:\n",
+    "\n",
     "- __FILE: all_reviews.pkl__\n",
-    "- __FILE: all_games.pkl__"
+    "    - Contains a dataframe of all reviews of filtered games that are relevant for the analysis.\n",
+    "- __FILE: all_games.pkl__\n",
+    "    - Contains a dataframe of all filtered games that are relevant for the analysis.\n",
+    "\n",
+    "Further files:\n",
+    "\n",
+    "- __FILE: recommending_outlier_sample.txt__\n",
+    "    - Contains a sample of game reviews that recommended the game, but had negative sentiments.\n",
+    "\n",
+    "> ##### Note: If the combined datasets were already created you can skip to [2.2 Combine data](#22-combine-data). [Required modules](####required-modules) and [Configuration constants](####configuration-constants) must be executed beforehand."
    ]
   },
   {
@@ -1548,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1930,11 +1953,33 @@
     "    iqr = q3-q1\n",
     "    return df[((df[column]<(q1-1.5*iqr)) | (df[column]>(q3+1.5*iqr)))]\n",
     "\n",
-    "num_outliers_down = extract_outliers(df_voteddown_reviews, 'sent.comp').shape[0]\n",
-    "num_outliers_up = extract_outliers(df_votedup_reviews, 'sent.comp').shape[0]\n",
+    "df_outliers_recommend = extract_outliers(df_votedup_reviews, 'sent.comp')\n",
+    "df_outliers_not_recommend =  extract_outliers(df_voteddown_reviews, 'sent.comp')\n",
+    "\n",
+    "num_outliers_down = df_outliers_not_recommend.shape[0]\n",
+    "num_outliers_up = df_outliers_recommend.shape[0]\n",
     "\n",
     "print(\"Num voted down outliers:\", num_outliers_down)\n",
     "print(\"Num voted up outliers:\", num_outliers_up)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many outliers in the recommending group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"recommending_outlier_sample.txt\", \"w+\") as f:\n",
+    "    for idx, text in enumerate(df_outliers_recommend['text']):\n",
+    "        f.write(f\"{idx}:\\n{text.rstrip()}\\n\\n{'_'*100}\\n\")"
    ]
   },
   {
